samples/_failures_safe/1761403268_d80d5e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_48916b02.c: In function ‘main’:
./samples/SAFE/__tmp_48916b02.c:178:5: error: expected expression at end of input
  178 |     int token_count = tokenize(input, tokens,
      |     ^~~
./samples/SAFE/__tmp_48916b02.c:178:5: error: expected declaration or statement at end of input
